# gen_postgres_dbs

./: README.md  docker-compose.yml  import_csv_to_postgres.py  main.py  pyproject.toml  requirements.txt  setup.sh
