[project]
name = "gen-postgres-databases"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy==2.3.1",
    "pandas==2.3.1",
    "psycopg2==2.9.10",
    "psycopg2-binary==2.9.10",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "six==1.17.0",
    "tzdata==2025.2",
]
